fix: nav spacing

--- a/src/Nav/nav-item.scss
+++ b/src/Nav/nav-item.scss
@@ -4,10 +4,7 @@
   cursor: pointer;
   padding: 8px 16px;
   background-color: white;
-  font-size: 18px;
-  line-height: 28px;
   border-radius: 13px;
-  margin: 0 6px;
   color: $grey500;
 
   &--active {
